--- a/argocd-fybrik-apps/fybrik-crd-kind-control.yaml
+++ b/argocd-fybrik-apps/fybrik-crd-kind-control.yaml
@@ -2,6 +2,7 @@ apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
   name: fybrik-crd
+  namespace: argocd
 spec:
   destination:
     name: ''
