--- a/argocd-fybrik-apps/fybrik-crd-kind-kind.yaml
+++ b/argocd-fybrik-apps/fybrik-crd-kind-kind.yaml
@@ -2,6 +2,7 @@ apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
   name: fybrik-crd-remote
+  namespace: argocd
 spec:
   destination:
     name: 'kind-kind'
