--- a/argocd-fybrik-apps/fybrik-crd-kind-control.yaml
+++ b/argocd-fybrik-apps/fybrik-crd-kind-control.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: fybrik-crd
+  name: fybrik-crd-kind-control
   namespace: argocd
 spec:
   destination:
