--- a/argocd-fybrik-apps/fybrik-crd-kind-kind.yaml
+++ b/argocd-fybrik-apps/fybrik-crd-kind-kind.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: fybrik-crd-remote
+  name: fybrik-crd-kind-kind
   namespace: argocd
 spec:
   destination:
