--- a/argocd-fybrik-apps/fybrik-crd-kind-control.yaml
+++ b/argocd-fybrik-apps/fybrik-crd-kind-control.yaml
@@ -3,6 +3,8 @@ kind: Application
 metadata:
   name: fybrik-crd-kind-control
   namespace: argocd
+  finalizers:
+    - resources-finalizer.argocd.argoproj.io
 spec:
   destination:
     name: ''
