--- a/cluster-config/kind-control/config.json
+++ b/cluster-config/kind-control/config.json
@@ -1,6 +1,7 @@
 {
   "cluster": {
     "name": "kind-control",
+    "address": "https://kubernetes.default.svc",
     "zone": "baggin",
     "region": "took",
     "vaultAuthPath": "control"
