--- a/blueprints/kind-kind/blueprint-1.yaml
+++ b/blueprints/kind-kind/blueprint-1.yaml
@@ -23,7 +23,7 @@ spec:
     selector:
       matchLabels:
         app: my-notebook-read
-  cluster: thegreendragon
+  cluster: kind-control
   modules:
     arrow-flight-module:
       arguments:
