--- a/blueprints/kind-kind/my-notebook-fybrik-notebook-sample-fybrik-system.yaml
+++ b/blueprints/kind-kind/my-notebook-fybrik-notebook-sample-fybrik-system.yaml
@@ -1,75 +1,53 @@
-typemeta:
-  kind: Blueprint
-  apiversion: app.fybrik.io/v1beta1
-objectmeta:
-  name: my-notebook-fybrik-notebook-sample
-  generatename: ""
-  namespace: fybrik-system
-  selflink: ""
-  uid: ""
-  resourceversion: ""
-  generation: 0
-  creationtimestamp: "0001-01-01T00:00:00Z"
-  deletiontimestamp: null
-  deletiongraceperiodseconds: null
+apiVersion: app.fybrik.io/v1beta1
+kind: Blueprint
+metadata:
+  annotations:
+    app.fybrik.io/app-uuid: 52fc09bb-6525-4ec3-a36a-1bc16d819fa9
+  creationTimestamp: null
+  finalizers:
+  - Blueprint.finalizer
   labels:
     app: my-notebook
     app.fybrik.io/app-name: my-notebook
     app.fybrik.io/app-namespace: fybrik-notebook-sample
     razee/watch-resource: debug
-  annotations:
-    app.fybrik.io/app-uuid: b17f38b8-3381-444f-b4e7-b7c73b311a9b
-  ownerreferences: []
-  finalizers:
-  - Blueprint.finalizer
-  managedfields: []
+  name: my-notebook-fybrik-notebook-sample
+  namespace: fybrik-system
 spec:
+  application:
+    context:
+      intent: Fraud Detection
+    selector:
+      matchLabels:
+        app: my-notebook
   cluster: kind-kind
-  modulesnamespace: fybrik-blueprints
   modules:
     arrow-flight-module:
-      name: arrow-flight-module
-      chart:
-        name: ghcr.io/fybrik/arrow-flight-module-chart:0.11.0
-        chartpullsecret: ""
-        values:
-          image.tag: 0.11.0
       arguments:
         assets:
-        - arguments:
-          - vault:
-              read:
-                role: module
-                secretpath: /v1/kubernetes-secrets/paysim-csv?namespace=fybrik-notebook-sample
-                address: http://control-control-plane:80
-                authpath: /v1/auth/kind/login
-            connection:
+        - args:
+          - connection:
               name: s3
-              additionalproperties:
-                items:
-                  s3:
-                    bucket: demo
-                    endpoint: http://localstack.fybrik-notebook-sample.svc.cluster.local:4566
-                    object_key: PS_20174392719_1491204439457_log.csv
+              s3:
+                bucket: demo
+                endpoint: http://localstack.fybrik-notebook-sample.svc.cluster.local:4566
+                object_key: PS_20174392719_1491204439457_log.csv
             format: csv
-          assetid: fybrik-notebook-sample/paysim-csv
-          transformations: []
+            vault:
+              read:
+                address: http://control-control-plane:80
+                authPath: /v1/auth/kind/login
+                role: module
+                secretPath: /v1/kubernetes-secrets/paysim-csv?namespace=fybrik-notebook-sample
+          assetID: fybrik-notebook-sample/paysim-csv
           capability: read
-      assetids:
+      assetIds:
       - fybrik-notebook-sample/paysim-csv
-  application:
-    workloadselector:
-      matchlabels:
-        app: my-notebook
-      matchexpressions: []
-    context:
-      properties:
-        items:
-          intent: Fraud Detection
+      chart:
+        name: ghcr.io/fybrik/arrow-flight-module-chart:0.11.0
+        values:
+          image.tag: 0.11.0
+      name: arrow-flight-module
+  modulesNamespace: fybrik-blueprints
 status:
-  observedstate:
-    ready: false
-    error: ""
-  observedgeneration: 0
-  modulesstate: {}
-  releases: {}
+  observedState: {}
